--- a/research.html
+++ b/research.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html lang="zxx">
-    <?php include 'head.php';?>	
+
+    <head>
+
+		<div id="head-include"></div>
+		<script>        
+			fetch('head.html')
+				.then(response => response.text())
+				.then(data => {
+					document.getElementById('head-include').innerHTML = data;
+				});
+		</script>
+	</head>
     <body>
 		<!-- Start Preloader Area -->
 		<div class="preloader">
@@ -10,9 +21,14 @@
 		</div>
 		<!-- End Preloader Area -->
 		
-		<!-- Start Header Area -->
-		<?php include 'header.php';?>	
-		<!-- End Header Area -->
+			<div id="header-include"></div>
+		<script>        
+			fetch('header.html')
+				.then(response => response.text())
+				.then(data => {
+					document.getElementById('header-include').innerHTML = data;
+				});
+		</script>
 
 		<!-- Search Modal -->
 		<div class="modal fade search-modal-area" id="exampleModalsrc">
@@ -285,7 +301,14 @@
 			</div>
 		</section>
 
-		<?php include 'footer.php';?>
+		<div id="footer-include"></div>
+		<script>        
+			fetch('footer.html')
+				.then(response => response.text())
+				.then(data => {
+					document.getElementById('footer-include').innerHTML = data;
+				});
+		</script>
 		
 		<!-- Start Go Top Area -->
 		<div class="go-top">
